Speed up preparing for a list of maintenance scopes
2025-09-02

- new: add scopeCollection map in PartConfig to avoid assembling a
       list of maintenance scopes over and over
- change: rework getMaintenanceScopeList() in PartConfig