@@ -1,7 +1,7 @@
 /*
  * Mars Simulation Project
  * PartConfig.java
- * @date 2022-10-03
+ * @date 2025-09-02
  * @author Scott Davis
  */
 package com.mars_sim.core.resource;
@@ -14,7 +14,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 
 import org.jdom2.Document;
 import org.jdom2.Element;
@@ -52,9 +51,11 @@ public final class PartConfig  {
 	/** The set of parts. */
 	private Set<Part> partSet;
 	/** The map of maintenance scopes. */
-	private Map<String, List<MaintenanceScope>> scopes = new HashMap<>();
+	private Map<String, List<MaintenanceScope>> scopeMap = new HashMap<>();
 	/** The collection of part scopes (as defined for each part in parts.xml. */
 	private Set<String> partScopesRegistry = new TreeSet<>();
+	
+	private Map<Collection<String>, List<MaintenanceScope>> scopeCollection = new HashMap<>();
 	
 	/**
 	 * Constructor.
@@ -177,7 +178,7 @@ public final class PartConfig  {
 				throw new IllegalStateException(
 						"PartConfig detected invalid type in parts.xml : " + type);
 
-			// Get storable
+			// Get part
 			Part p = new Part(name, nextID, description, goodType, mass, 1);
 
 			for (Part pp: newPartSet) {
@@ -198,9 +199,7 @@ public final class PartConfig  {
 							validName = true;
 							double probability = Double.parseDouble(entityElement.getAttributeValue(PROBABILITY));
 							int maxNumber = Integer.parseInt(entityElement.getAttributeValue(MAX_NUMBER));
-	
-							MaintenanceScope newMaintenance = new MaintenanceScope(p, entityName, probability, maxNumber);
-							addPartScope(entityName, newMaintenance);
+							addPartScope(entityName, new MaintenanceScope(p, entityName, probability, maxNumber));
 						}
 					}
 					
@@ -209,7 +208,6 @@ public final class PartConfig  {
 					}	
 				}
 			}
-			
 
 			// Add part to newPartSet.
 			newPartSet.add(p);			
@@ -228,25 +226,33 @@ public final class PartConfig  {
 	private void addPartScope(String scope, MaintenanceScope newMaintenance) {
 
 		String key = scope.toLowerCase();
-		List<MaintenanceScope> maintenance = scopes.computeIfAbsent(key, k -> new ArrayList<>());
+		List<MaintenanceScope> maintenance = scopeMap.computeIfAbsent(key, k -> new ArrayList<>());
+		// Double-checking the size of the list : logger.info(scope + " 1. # of scopes: " + scopes.get(scope).size());
 		maintenance.add(newMaintenance);
+		// Double-checking the size of the list : logger.info(scope + " 2. # of scopes: " + scopes.get(scope).size());
 	}
 
 	/**
-	 * Gets the maintenance schedules for a specific scopes, e.g. type of vehicle or function.
+	 * Gets the maintenance scope list for a specific collection of scopes, e.g. type of vehicle or function.
 	 * 
 	 * @param scope Possible scopes
 	 * @return
 	 */
-	public List<MaintenanceScope> getMaintenance(Collection<String> scope) {
-		List<MaintenanceScope> results = new ArrayList<>();
-		for (String s : scope) {
-			List<MaintenanceScope> m = scopes.get(s.toLowerCase());
-			if (m != null) {
-				results.addAll(m);
-			}
+	public List<MaintenanceScope> getMaintenanceScopeList(Collection<String> scopes) {
+		if (scopeCollection.containsKey(scopes)) {
+			return scopeCollection.get(scopes);
 		}
-		return results ;
+		else {
+			List<MaintenanceScope> results = new ArrayList<>();
+			for (String s : scopes) {
+				List<MaintenanceScope> m = scopeMap.get(s.toLowerCase());
+				if (m != null) {
+					results.addAll(m);
+				}
+			}
+			scopeCollection.put(scopes, results); 
+			return results ;
+		}
 	}
 
 	/**
@@ -258,7 +264,9 @@ public final class PartConfig  {
 	 * @return
 	 */
 	public List<MaintenanceScope> getMaintenance(Collection<String> scope, Part part) {
-		return getMaintenance(scope).stream().filter(m -> m.getPart().equals(part)).collect(Collectors.toList());
+		return getMaintenanceScopeList(scope).stream()
+				.filter(m -> m.getPart().getID() == part.getID())
+				.toList();
 	}
 
 	/**
